# epub-image-extractor

./: .gitignore  README-ptbr.md  README.md  pyproject.toml
docs/: EPUB_Image_Extractor.postman_collection.json  application-flow.drawio
epub-image-extractor/: helpers.py  main.py  services.py
epub_image_extractor/: helpers.py  main.py  routes.py  services.py
static/css/: styles.css
static/js/: scripts.js
templates/: upload.jinja
tests/test_helpers/: test_generate_uuid_string.py
